--- a/public/css/department.css
+++ b/public/css/department.css
@@ -11,7 +11,7 @@
     display: block;
     border-bottom: solid 1px;
 }
-.department-employees .department {
+.department-employees .jobtitle {
     display: block;
     font-size: .88rem;
     margin-bottom: 2rem;
