remove socket io junk

--- a/src/views/initial-setup.pug
+++ b/src/views/initial-setup.pug
@@ -4,7 +4,7 @@ block content
         div
             h1 Account setup
     div(class="main")
-        form(id="loginform")
+        form(id="loginform" action="setup" method="post")
             label Name
                 input(type="text" name="name" id="name")
             label
@@ -25,9 +25,9 @@ block content
             button(type="submit") Done
 block footerScripts
     script(src="./js/main.js")
-    script(src="/socket.io/socket.io.js")
+    //- script(src="/socket.io/socket.io.js")
     script.
-        const socket = io();
+        //- const socket = io();
         const form = document.getElementById('loginform');
         const name = document.getElementById('name');
         const department = document.getElementById('department-select');
@@ -47,26 +47,26 @@ block footerScripts
             readUrl(this);
         };
 
-        const getCookie = name => {
-            const nameEQ = name + "=";
-            const ca = document.cookie.split(';');
-            for(let i=0;i < ca.length;i++) {
-                const c = ca[i];
-                while (c.charAt(0)==' ') c = c.substring(1,c.length);
-                if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length,c.length);
-            }
-            return null;
-        }
+        //- const getCookie = name => {
+        //-     const nameEQ = name + "=";
+        //-     const ca = document.cookie.split(';');
+        //-     for(let i=0;i < ca.length;i++) {
+        //-         const c = ca[i];
+        //-         while (c.charAt(0)==' ') c = c.substring(1,c.length);
+        //-         if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length,c.length);
+        //-     }
+        //-     return null;
+        //- }
 
-        const setup = event => {
-            event.preventDefault();
-            socket.emit('setup', {
-                username: name.value,
-                profileImg: fileOut.src,
-                department: department.value,
-                jobtitle: jobtitle.value
-            });
-            return false;
-        };
-        form.addEventListener('submit', setup);
+        //- const setup = event => {
+        //-     event.preventDefault();
+        //-     socket.emit('setup', {
+        //-         username: name.value,
+        //-         profileImg: fileOut.src,
+        //-         department: department.value,
+        //-         jobtitle: jobtitle.value
+        //-     });
+        //-     return false;
+        //- };
+        //- form.addEventListener('submit', setup);
         
