--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -8,7 +8,7 @@ block content
     header(class="header")
         h1(class="visually-hidden") Login
     div(class="main" style="background-image: url(/assets/login-bg.png);background-position-y: 1em;")
-        form(class="narrow-wrapper" id="loginform")
+        form(class="narrow-wrapper" id="loginform" action="login" method="post")
             div(class="input-wrapper")
                 input(type="email" name="email" id="email" required)
                 label(for="email") Email
@@ -20,29 +20,11 @@ block content
                 a(class="forgot-password" href="/reset-password") Forgot password?
                 a(class="new-user" href="/register") New user
 
-            button(type="submit" href="/mypage")
-                    img(src="/assets/checkmark.png" alt="Login")
+            button(type="submit")
+                img(src="/assets/checkmark.png" alt="Login")
 block footerScripts
     script(src="./js/main.js")
-    script(src="/socket.io/socket.io.js")
     script.
-        const socket = io();
-
-        const form = document.getElementById('loginform');
-        const email = document.getElementById('email');
-        const password = document.getElementById('usrpwd');
-        const login = event => {
-            event.preventDefault();
-            socket.emit('login', {
-              email: email.value,
-              password: password.value
-            });
-            //- console.log(email.value, password.value);
-            return false;
-        };
-
-        form.addEventListener('submit', login);
-
         const splash = document.getElementById("splash");
         splash.addEventListener("animationend", function() {
             splash.parentNode.removeChild(splash);
