--- a/src/views/reset-password.pug
+++ b/src/views/reset-password.pug
@@ -4,8 +4,8 @@ block content
         div
             h1 Forgot your password?
     div(class="main")
-        form
+        form(action="reset-password" method="post")
             label Email
-                input(type="email" name="emailaddress")
+                input(type="email" name="email")
             button(type="submit") Reset
         a(href="/register") New user
