--- a/src/views/shared/layout/root.pug
+++ b/src/views/shared/layout/root.pug
@@ -5,7 +5,7 @@ head
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible" content="ie=edge")
     link(rel="stylesheet" type="text/css" href="/style.css" media="all")
-    link(rel="manifest" href="manifest.json")
+    link(rel="manifest" href="/manifest.json")
     title #{pageTitle} / Flo
     include ../favicon.pug
     block headScripts
