--- a/src/views/shared/profile-image.pug
+++ b/src/views/shared/profile-image.pug
@@ -1,6 +1,5 @@
 picture(class="profile-image-wrapper")
     img(
-        id= profile.id
-        src= profile.imageUrl
-        alt= profile.alt
+        src= model.userData.image
+        alt= model.userData.alt
     )
