--- a/src/views/department.pug
+++ b/src/views/department.pug
@@ -9,7 +9,7 @@ block content
             ul(class="department-employees")
                 each employee, index in model.currentPage.employees
                     li
-                        a(href="/employee/" + index)
+                        a(href="/department/" + model.id + '/' + employee.slug)
                             img(class="goto-employee-arrow" src="/assets/goto.png" alt="Go to user profile")
                             span(class="name")= employee.username
                             span(class="title")= employee.jobtitle
