--- a/src/views/setup.pug
+++ b/src/views/setup.pug
@@ -9,9 +9,10 @@ block content
                 input(type="text" name="username" id="username")
             label
                 span(class="visuallyhidden") Profile picture
-                - var profile = { id: 'imageOut', imageUrl: '/assets/ralph-wave.gif', alt: 'Profile image' }
-                include shared/profile-image.pug
-                input(type="file" name="userimage" accept="image/*" id="imageIn" class="visually-hidden")
+                picture(class="profile-image-wrapper")
+                    img(id='imageOut' src='/assets/ralph-wave.gif' alt='')
+                input(type="file" name="userimage" accept="image/*" id="userimage" class="visually-hidden")
+                input(type="string" name="imageurl" id="imageurl" class="visually-hidden")
             
             div
                 label(for="department") Choose department:
@@ -30,17 +31,19 @@ block footerScripts
             name = document.getElementById('name'),
             department = document.getElementById('department'),
             jobtitle = document.getElementById('jobtitle'),
-            fileIn = document.getElementById('imageIn'),
-            fileOut = document.getElementById('imageOut');
+            fileIn = document.getElementById('userimage'),
+            fileOut = document.getElementById('imageOut'),
+            imageurl = document.getElementById('imageurl');
 
         const readUrl = event => {
             if(event.files && event.files[0]) {
                 let reader = new FileReader();
-                    reader.onload = event => fileOut.src = event.target.result;
+                    reader.onload = event => {
+                        fileOut.src = event.target.result;
+                        imageurl.value = event.target.result;
+                    }
                     reader.readAsDataURL(event.files[0]);
             }
         }
 
-        fileIn.onchange = () => {
-            readUrl(this);
-        };
+        fileIn.onchange = function() {readUrl(this);}
