--- a/src/views/shared/add-service-worker.pug
+++ b/src/views/shared/add-service-worker.pug
@@ -3,6 +3,6 @@ script.
     if ('serviceWorker' in navigator) {
         // Use the window load event to keep the page load performant
         window.addEventListener('load', () => {
-            navigator.serviceWorker.register('../service-worker.js');
+            navigator.serviceWorker.register('/service-worker.js');
         });
     }
