--- a/src/views/chat.pug
+++ b/src/views/chat.pug
@@ -11,7 +11,7 @@ block content
                 input(id="m" autocomplete="off")
                 button Send
 block footerScripts
-    script(src="./js/main.js")
+    script(src="/js/main.js")
     script(src="/socket.io/socket.io.js")
     script.
         const socket = io();
