--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -23,7 +23,7 @@ block content
             button(type="submit")
                 img(src="/assets/checkmark.png" alt="Login")
 block footerScripts
-    script(src="./js/main.js")
+    script(src="/js/main.js")
     script.
         const splash = document.getElementById("splash");
         splash.addEventListener("animationend", function() {
