--- a/src/views/mypage.pug
+++ b/src/views/mypage.pug
@@ -7,4 +7,4 @@ block content
         h2(class="status-title") No requests from your colleagues
 
 block footerScripts    
-    script(src="./js/main.js")
+    script(src="/js/main.js")
