--- a/src/views/register.pug
+++ b/src/views/register.pug
@@ -11,4 +11,4 @@ block content
                 input(type="password" name="password" id="password")
             button(type="submit") Create
 block footerScripts
-    script(src="./js/main.js")
+    script(src="/js/main.js")
