--- a/src/views/setup.pug
+++ b/src/views/setup.pug
@@ -25,7 +25,7 @@ block content
                 input(type="text" name="jobtitle" id="jobtitle")
             button(type="submit") Done
 block footerScripts
-    script(src="./js/main.js")
+    script(src="/js/main.js")
     script.
         const form = document.getElementById('loginform'),
             name = document.getElementById('name'),
