--- a/src/views/shared/profile-image.pug
+++ b/src/views/shared/profile-image.pug
@@ -1,5 +1,5 @@
 picture(class="profile-image-wrapper")
     img(
-        src= model.userData.image
-        alt= model.userData.alt
+        src= model.user && model.user.image || '/assets/ralph-wave.gif'
+        alt= model.user && model.user.alt || 'Profile image'
     )
