Add card to employee profile

--- a/src/views/profile.pug
+++ b/src/views/profile.pug
@@ -4,10 +4,12 @@ block content
     include shared/header.pug
     div(class="main")
         div(class="info-card")
-            img(src="/assets/countdown.png" alt="The user is currently very busy")
-            p Very Busy
-            p Miljødirektoratet
-            p Avalible in
-                span 13min
+            div(class="info-card__part info-card__part--icon-wrapper")
+                img(src="/assets/hourglass--very-busy.png" alt="The user is currently very busy")
+            div(class="info-card__part  info-card__part--content-wrapper")
+                p(class="info__status") Very Busy
+                p(class="info__kundenavn") Miljødirektoratet
+                p(class="info__time") Avalible in
+                    span 13min
 
     script(src="/js/main.js")
