Add request-cards to mypage

--- a/public/style.css
+++ b/public/style.css
@@ -7,4 +7,5 @@
 @import '/css/navigation.css';
 @import '/css/profile.css';
 @import '/css/department.css';
+@import '/css/cards.css';
 @import '/css/utils.css';
