--- a/public/css/login.css
+++ b/public/css/login.css
@@ -16,7 +16,7 @@
 .input-wrapper {
     position: relative;
     height: 4rem;
-    margin-bottom: 1rem;
+    margin-top: 1.5rem;
 }
 .input-wrapper input {
     position: absolute;
