--- a/src/views/login.pug
+++ b/src/views/login.pug
@@ -8,7 +8,10 @@ block content
     header(class="header")
         h1(class="visually-hidden") Login
     div(class="main" style="background-image: url(/assets/login-bg.png);background-position-y: 1em;")
-        form(class="narrow-wrapper" id="loginform" action="login" method="post")
+        form(class=`narrow-wrapper ${errorMessage ? '.login-error': ''}` id="loginform" action="login" method="post")
+            if errorMessage
+                div
+                    p= errorMessage
             div(class="input-wrapper")
                 input(type="email" name="email" id="email" required)
                 label(for="email") Email
