--- a/public/css/general.css
+++ b/public/css/general.css
@@ -4,6 +4,14 @@
     box-sizing: border-box;
 }
 
+a:active,
+a:focus,
+button:active,
+button:focus {
+    outline: solid salmon;
+    z-index: 1;
+}
+
 input {
   font-size: 16px;
 }
