--- a/src/views/mypage.pug
+++ b/src/views/mypage.pug
@@ -7,37 +7,37 @@ block content
         //-     img(src="/assets/hourglass.png")
         //-     h2(class="status-title") No requests from your colleagues
         
-        div(class="request-card")
-            div(class="")
+        a(class="request-card" href="/request/2345")
+            div(class="request-card__content")
+                img(src="/assets/goto.png" alt="Check out the request from Eirik")
                 h3 Eirik Fossheim
-                img(src="/assets/hourglass--very-busy.png" alt="The user is currently very busy")
-            div(class="")
-                p(class="") Miljodirektoratet
-                p(class="") 8mins ago
+                div(class="request-card__info")
+                    p(class="") Miljodirektoratet
+                    p(class="") 8mins ago
 
-        div(class="request-card request-card--important")
-            div(class="")
+        a(class="request-card request-card--non-important" href="/request/2345")
+            div(class="request-card__content")
+                img(src="/assets/goto.png" alt="Check out the request from Eirik")
                 h3 Eirik Fossheim
-                img(src="/assets/hourglass--very-busy.png" alt="The user is currently very busy")
-            div(class="")
-                p(class="") Miljodirektoratet
-                p(class="") 8mins ago
-
-        div(class="request-card")
-            div(class="")
+                div(class="request-card__info")
+                    p(class="") Miljodirektoratet
+                    p(class="") 8mins ago
+        
+        a(class="request-card request-card--important" href="/request/2345")
+            div(class="request-card__content")
+                img(src="/assets/goto.png" alt="Check out the request from Eirik")
                 h3 Eirik Fossheim
-                img(src="/assets/hourglass--very-busy.png" alt="The user is currently very busy")
-            div(class="")
-                p(class="") Miljodirektoratet
-                p(class="") 8mins ago
-
-        div(class="request-card")
-            div(class="")
+                div(class="request-card__info")
+                    p(class="") Miljodirektoratet
+                    p(class="") 8mins ago
+        
+        a(class="request-card request-card--joy" href="/request/2345")
+            div(class="request-card__content")
+                img(src="/assets/goto.png" alt="Check out the request from Eirik")
                 h3 Eirik Fossheim
-                img(src="/assets/hourglass--very-busy.png" alt="The user is currently very busy")
-            div(class="")
-                p(class="") Miljodirektoratet
-                p(class="") 8mins ago
+                div(class="request-card__info")
+                    p(class="") Miljodirektoratet
+                    p(class="") 8mins ago
 
 block footerScripts    
     script(src="/js/main.js")
