--- a/src/views/mypage.pug
+++ b/src/views/mypage.pug
@@ -2,7 +2,8 @@ extends shared/layout/main.pug
 
 block content
     include shared/header.pug
-    div(class="main" style="background-image: url(/assets/login-bg.png);background-position-y: 5em;")
+
+    div(class="main")
         //- div
         //-     img(src="/assets/hourglass.png")
         //-     h2(class="status-title") No requests from your colleagues
