--- a/public/css/animating-background.css
+++ b/public/css/animating-background.css
@@ -6,6 +6,13 @@
     position: fixed;
     pointer-events: none;
     left: 0;
+    z-index: -1;
+}
+@media (max-width: 480px) {
+    .background-animation {
+        width: 300%;
+        margin-left: -150%;
+    }
 }
 
 .inner-container {
