--- a/public/css/general.css
+++ b/public/css/general.css
@@ -76,9 +76,15 @@ input {
     flex: 1;
     align-items: center;
     justify-content: center;
-    padding: 2rem;
     background-repeat: no-repeat;
     background-position: center;
+    padding-top: 2rem;
+
+}
+@media (min-width: 480px) {
+    .main-wrapper .main {
+        padding: 2rem;
+    }
 }
 
 img {
