--- a/src/views/register.pug
+++ b/src/views/register.pug
@@ -4,7 +4,7 @@ block content
         div
             h1 Create a new user
     div(class="main")
-        form(id="loginform" action="register" method="post")
+        form(class="narrow-wrapper" id="loginform" action="register" method="post")
             label Email
                 input(type="email" name="email" id="email")
             label Password
