--- a/src/views/reset-password.pug
+++ b/src/views/reset-password.pug
@@ -4,7 +4,7 @@ block content
         div
             h1 Forgot your password?
     div(class="main")
-        form(action="reset-password" method="post")
+        form(action="/reset-password" method="post")
             label Email
                 input(type="email" name="email")
             button(type="submit") Reset
