--- a/src/views/shared/countdown.pug
+++ b/src/views/shared/countdown.pug
@@ -1,8 +1,10 @@
 nav(class="countdown")
-    span(class="amination-background")
+    span(class="countdown-animation-background")
     div(class="container")
-        div(class="content")
-            p dummytekst
+        div(class="main-wrapper")
+            div(class="main")
+                div(class="narrow-wrapper")
+                    p dummytekst
     button(class="countdown-toggler")
         span(class="visually-hidden") Focus
         img(class="open" src="/assets/countdown.png" alt="Countdown clock")
