--- a/src/views/shared/layout/plane.pug
+++ b/src/views/shared/layout/plane.pug
@@ -5,7 +5,8 @@ block body
     block splash
     
     div(class="page-container")
-        div(class=`main-wrapper`)
+        div(class=`main-wrapper u-wrapper`)
             block content
+
 block footerScripts
-    script(src="./js/main.js")
+    script(src="/js/main.js")
