--- a/src/views/shared/navigation.pug
+++ b/src/views/shared/navigation.pug
@@ -1,6 +1,6 @@
 nav(class="main-nav")
     div(class="container")
-        ul(class="nav-list")
+        ul(class="nav-list u-wrapper")
             if model && model.departments
                 each opt in model.departments
                     li
