--- a/public/css/utils.css
+++ b/public/css/utils.css
@@ -1,9 +1,16 @@
-.visually-hidden { 
+.visually-hidden {
     position: absolute !important;
-    height: 1px; 
+    height: 1px;
     width: 1px;
     overflow: hidden;
-    clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+    clip: rect(1px 1px 1px 1px);
+    /* IE6, IE7 */
     clip: rect(1px, 1px, 1px, 1px);
-    white-space: nowrap; /* added line */
+    white-space: nowrap;
+    /* added line */
+}
+
+.u-wrapper {
+    max-width: 500px;
+    margin: auto;
 }
