--- a/src/views/404.pug
+++ b/src/views/404.pug
@@ -4,4 +4,5 @@ block content
         div
             h1 404 - Page not found
     div(class="main")
-        p Looks like the page you are looking for is gone. Don't worry, I will get to the bottom of this!
+        div(class="narrow-wrapper")
+            p Looks like the page you are looking for is gone. Don't worry, I will get to the bottom of this!
