--- a/src/views/mypage.pug
+++ b/src/views/mypage.pug
@@ -8,37 +8,47 @@ block content
         //-     img(src="/assets/hourglass.png")
         //-     h2(class="status-title") No requests from your colleagues
         
-        a(class="request-card" href="/request/2345")
-            div(class="request-card__content")
-                img(src="/assets/goto.png" alt="Check out the request from Eirik")
-                h3 Eirik Fossheim
-                div(class="request-card__info")
-                    p(class="") Miljodirektoratet
-                    p(class="") 8mins ago
+        if model && model.requests
+            each request in model.requests
+                a(class="request-card" href="/request/2345")
+                    div(class="request-card__content")
+                        img(src="/assets/goto.png" alt="Check out the request from Eirik")
+                        h3 Eirik Fossheim
+                        div(class="request-card__info")
+                            p(class="")= request.project
+                            p(class="") ?
+                                span mins ago
+        //- a(class="request-card" href="/request/2345")
+        //-     div(class="request-card__content")
+        //-         img(src="/assets/goto.png" alt="Check out the request from Eirik")
+        //-         h3 Eirik Fossheim
+        //-         div(class="request-card__info")
+        //-             p(class="") Miljodirektoratet
+        //-             p(class="") 8mins ago
 
-        a(class="request-card request-card--non-important" href="/request/2345")
-            div(class="request-card__content")
-                img(src="/assets/goto.png" alt="Check out the request from Eirik")
-                h3 Eirik Fossheim
-                div(class="request-card__info")
-                    p(class="") Miljodirektoratet
-                    p(class="") 8mins ago
+        //- a(class="request-card request-card--non-important" href="/request/2345")
+        //-     div(class="request-card__content")
+        //-         img(src="/assets/goto.png" alt="Check out the request from Eirik")
+        //-         h3 Eirik Fossheim
+        //-         div(class="request-card__info")
+        //-             p(class="") Miljodirektoratet
+        //-             p(class="") 8mins ago
         
-        a(class="request-card request-card--important" href="/request/2345")
-            div(class="request-card__content")
-                img(src="/assets/goto.png" alt="Check out the request from Eirik")
-                h3 Eirik Fossheim
-                div(class="request-card__info")
-                    p(class="") Miljodirektoratet
-                    p(class="") 8mins ago
+        //- a(class="request-card request-card--important" href="/request/2345")
+        //-     div(class="request-card__content")
+        //-         img(src="/assets/goto.png" alt="Check out the request from Eirik")
+        //-         h3 Eirik Fossheim
+        //-         div(class="request-card__info")
+        //-             p(class="") Miljodirektoratet
+        //-             p(class="") 8mins ago
         
-        a(class="request-card request-card--joy" href="/request/2345")
-            div(class="request-card__content")
-                img(src="/assets/goto.png" alt="Check out the request from Eirik")
-                h3 Eirik Fossheim
-                div(class="request-card__info")
-                    p(class="") Miljodirektoratet
-                    p(class="") 8mins ago
+        //- a(class="request-card request-card--joy" href="/request/2345")
+        //-     div(class="request-card__content")
+        //-         img(src="/assets/goto.png" alt="Check out the request from Eirik")
+        //-         h3 Eirik Fossheim
+        //-         div(class="request-card__info")
+        //-             p(class="") Miljodirektoratet
+        //-             p(class="") 8mins ago
 
 block footerScripts    
     script(src="/js/main.js")
