--- a/src/views/shared/layout/main.pug
+++ b/src/views/shared/layout/main.pug
@@ -7,7 +7,8 @@ block body
     include ../countdown.pug
     
     div(class="page-container")
-        div(class=`main-wrapper`)
+        div(class=`main-wrapper u-wrapper`)
             block content
+
 block footerScripts
-    script(src="./js/main.js")
+    script(src="/js/main.js")
