--- a/src/views/shared/countdown.pug
+++ b/src/views/shared/countdown.pug
@@ -4,7 +4,9 @@ nav(class="countdown")
         div(class="main-wrapper")
             div(class="main")
                 div(class="narrow-wrapper")
-                    p dummytekst
+                    form
+                        button(id="startTimer") Start
+
     button(class="countdown-toggler")
         span(class="visually-hidden") Focus
         img(class="open" src="/assets/countdown.png" alt="Countdown clock")
